welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: not found: value fonctionTest
while(fonctionTest()==false){pasDeSerpent();}
      ^